methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:4: error: not found: value isFacingTrail
    if (isFacingTrail()){
        ^SlugHunting:9: error: not found: value isFacingTrail
      if (isFacingTrail()){
          ^