methods.slug.SlugHunting.scala.code
def hunt() {
  while (!estSurBiscuit()){
    if (isFacingTrail()){
      avance()
    }
    else {
      droite()
      if (isFacingTrail()){
        avance()
      }
      else {
        droite()
        droite()
        avance()
      }
    }
  }
}